@@ -2,10 +2,7 @@ use strict;
 use warnings;
 use Test::More tests => 1;
 use Bloonix::Agent;
-use Bloonix::IPC::Cmd;
-use Bloonix::Config;
-use Bloonix::Plugin;
 use Bloonix::CLI;
-use Bloonix::REST;
+use Bloonix::Facts;
 
 ok(1, "use");
