@@ -1,3 +1,7 @@
+bloonix-agent (0.50) released at 2015-XX-XX
+
+    * Implemented Bloonix::IO::SIPC as replacement for Bloonix:REST.
+
 bloonix-agent (0.49) released at 2015-03-09
 
     * Improved parsing of nagios statistics.
